--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "drei": "^2.2.21",
     "firebase": "^9.13.0",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
